--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        .resize{
+            width: 400px;
+            height: 400px;
+            border: 1px solid cyan;
+            cursor: col-resize;
+        }
+    </style>
     <script src="./index.js"></script>
 </head>
 
 <body>
+<div class="resize"></div>
 
 </body>
 
