--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         }
     </style>
     <script src="./index.js"></script>
+    <script>console.log('fuck the king!!!!')</script>
 </head>
 
 <body>
